Fix score tooltip icon alignment

--- a/projects/plugins/boost/app/assets/src/js/react-components/components/score-context/styles.module.scss
+++ b/projects/plugins/boost/app/assets/src/js/react-components/components/score-context/styles.module.scss
@@ -8,6 +8,10 @@
 	padding-left: 10px;
 }
 
+.tooltip {
+	margin: 8px 0 0 6px;
+}
+
 .tooltip p:first-child {
 	margin-top: 0;
 }
